# peridot

./: .gitignore  Cargo.toml  LICENSE  Makefile  README.md  changeOfAddress.txt  writer.sh
docs/: auto-commit.md
examples/: Cargo.toml
examples/src/: address-validation.rs  app-message-bench.rs  app-message-closures.rs  app-message-process.rs  app-message-stream.rs  app-message-task.rs  app-stream-eos.rs  app-stream.rs  app-table-test.rs  app-task-api.rs  app.rs  baseline_bench.rs  sbx.rs  state_store.rs
peridot/: Cargo.toml
peridot/src/: init.rs  lib.rs
peridot/src/app/: app2.rs  builder.rs  config.rs  extensions.rs  mod.rs  psink.rs  pstream.rs  ptable.rs  wrappers.rs
peridot/src/app/app_engine/: error.rs  mod.rs  streams.rs  tables.rs  util.rs
peridot/src/app/config/: builder.rs  mod.rs  persistent_config.rs
peridot/src/app/error/: mod.rs
peridot/src/bencher/: mod.rs
peridot/src/engine/: context.rs  distributor.rs  engine_state.rs  error.rs  mod.rs  partition_queue.rs  streams.rs  util.rs
peridot/src/engine/admin_manager/: mod.rs
peridot/src/engine/changelog_manager/: mod.rs
peridot/src/engine/circuit_breaker/: mod.rs
peridot/src/engine/client_manager/: mod.rs
peridot/src/engine/consumer_manager/: mod.rs
peridot/src/engine/hook_manager/: mod.rs
peridot/src/engine/metadata_manager/: mod.rs  table_metadata.rs  topic_metadata.rs
peridot/src/engine/producer_factory/: mod.rs
peridot/src/engine/queue_manager/: changelog_queues.rs  mod.rs  partition_queue.rs  queue_metadata.rs  state_cells.rs
peridot/src/engine/queue_manager/partition_queue/: mod.rs
peridot/src/engine/queue_manager/partition_queue/queue_service/: mod.rs
peridot/src/engine/state_store_manager/: mod.rs  timestamped_waker.rs
peridot/src/engine/tasks/: mod.rs
peridot/src/engine/wrapper/: mod.rs  partitioner.rs  serde.rs  timestamp.rs
peridot/src/engine/wrapper/serde/: arvo.rs  json.rs  mod.rs  native.rs  proto.rs  serializers.rs
peridot/src/engine/wrapper/serde/base/: i64.rs  mod.rs  string.rs
peridot/src/error/: mod.rs
peridot/src/error/engine/: mod.rs
peridot/src/error/engine/consumer_manager/: mod.rs
peridot/src/extensions/: consumer.rs
peridot/src/filters/: mod.rs
peridot/src/message/: async_map.rs  filter.rs  fork.rs  forked_forward.rs  forward.rs  join.rs  map.rs  mod.rs  par_map.rs  state_fork.rs  types.rs
peridot/src/message/join/: mod.rs
peridot/src/message/join/table/: mod.rs
peridot/src/message/sink/: bench_sink.rs  changelog_sink.rs  debug_sink.rs  mod.rs  noop_sink.rs  print_sink.rs  state_sink.rs  topic_sink.rs
peridot/src/message/sink/topic_sink/: error.rs  mod.rs
peridot/src/message/stream/: connector.rs  head.rs  import.rs  mod.rs  serialiser.rs  transparent.rs
peridot/src/message/types/: headers.rs  message.rs  mod.rs  partial_message.rs  timestamp.rs
peridot/src/message/types/extractors/: headers.rs  key_value.rs  mod.rs  value.rs
peridot/src/pipeline/: changelog.rs  changelog_fork.rs  filter.rs  fork.rs  forked_forward.rs  forward.rs  join.rs  join_by.rs  map.rs  mod.rs  state_fork.rs
peridot/src/pipeline/message/: map.rs  mod.rs  types.rs
peridot/src/pipeline/message/sink/: mod.rs
peridot/src/pipeline/message/stream/: connector.rs  mod.rs
peridot/src/pipeline/pipeline/: changelog.rs  map.rs  mod.rs
peridot/src/pipeline/pipeline/sink/: mod.rs
peridot/src/pipeline/pipeline/stream/: map.rs  mod.rs  stream.rs
peridot/src/pipeline/serde_ext/: mod.rs
peridot/src/pipeline/sink/: bench_sink.rs  changelog_sink.rs  debug_sink.rs  mod.rs  noop_sink.rs  print_sink.rs  state_sink.rs  topic_sink.rs
peridot/src/pipeline/stream/: head.rs  import.rs  map.rs  mod.rs  serialiser.rs  stream.rs  transparent.rs
peridot/src/pipeline/stream/pipeline/: mod.rs  stage.rs
peridot/src/serde_ext/: mod.rs
peridot/src/state/: error.rs  extensions.rs  mod.rs
peridot/src/state/backend/: checkpoint.rs  distributed.rs  error.rs  in_memory.rs  mod.rs  persistent.rs  view.rs
peridot/src/state/backend/facade/: facade_distributor.rs  global_facade.rs  mod.rs  state_facade.rs
peridot/src/state/backend/in_memory/: mod.rs
peridot/src/state/backend/persistent/: mod.rs
peridot/src/state/backend/view/: mod.rs  state_view.rs  view_distributor.rs
peridot/src/state/facade/: facade_distributor.rs  mod.rs  state_facade.rs
peridot/src/state/store/: mod.rs  state_connectors.rs
peridot/src/state/store/in_memory/: mod.rs
peridot/src/state/table/: backend_sink.rs  mod.rs  partition_handler.rs  queue_handler.rs
peridot/src/state/view/: mod.rs  state_view.rs  view_distributor.rs
peridot/src/stream/: checkpoint.rs  fork.rs  mod.rs  types.rs
peridot/src/task/: import.rs  mod.rs  mod_delivery_bkp.rs  process.rs  table.rs  transform.rs  transparent.rs
peridot/src/types/: mod.rs
peridot/src/util/: common_format.rs  hash.rs  mod.rs
peridot_api/: Cargo.toml
peridot_api/src/: main.rs
peridot_gateway/: Cargo.toml
peridot_gateway/src/: main.rs
task-tracker/: Welcome.md
task-tracker/Completed/Changelog Topic Creation/: Changelog Topic Creation.md
task-tracker/Completed/Create Changelog Topics/: Create Changelog Topics.md
task-tracker/Completed/Investigate race condition for Join/: Investigate Race Condition for Joins.md
task-tracker/Completed/Refactor Message Stream Polls/: Refactor Message Stream Polls.md
task-tracker/External Dependencies/Custom Partition Assignor API/: Customer Partition Assignor API.md
task-tracker/In Progress/Consumer Per Source/: Consumer Per Topic Source.md
task-tracker/In Progress/Investigate race condition for Join/: Investigate Race Condition for Joins.md
task-tracker/In Progress/Recoverable Send Errors/: Recoverable Send Errors.md
task-tracker/In Progress/Refactor Message Stream Polls/: Refactor Message Stream Polls.md
test-cluster/: bench-rep-3.sh  bench.sh  bench_1.sh  bench_12.sh  bench_mac.sh  docker-compose.yaml  peridot.persistent.config  ref_bench.sh  reset.sh  seed.sh  start.sh  start_mac.sh
test-cluster/seed_data/: benchData.txt  changeOfAddress.txt  consent.Client.txt
(+9 files in other folders)
