[workspace]
members = [
    "peridot", 
    "examples"
]

[workspace.package]
version = "0.0.5"
edition = "2021"
homepage = ""
repository = ""
license = ""
authors = ["Thaddeus Treloar"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[workspace.dependencies]
dashmap ={ version = "5.5.3" }
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
tracing = "0.1.40"
tracing-subscriber = {version = "0.3.18", features = ["json", "parking_lot"]}