[package]
name = "examples"
version = "0.0.5"
edition = {workspace = true}
homepage = {workspace = true}
repository = {workspace = true}
license = {workspace = true}
authors = {workspace = true}

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[[bin]]
name = "sbx"
path = "src/sbx.rs"

[[bin]]
name = "app-message-bench"
path = "src/app-message-bench.rs"

[[bin]]
name = "app-message-closures"
path = "src/app-message-closures.rs"

[[bin]]
name = "app-message-task"
path = "src/app-message-task.rs"

[[bin]]
name = "address-validation"
path = "src/address-validation.rs"

[[bin]]
name = "baseline_bench"
path = "src/baseline_bench.rs"

[dependencies]
crossbeam = "0.8.4"
futures = "0.3.30"
anyhow = "1.0.79"
# eap = { path = "/Users/ttreloar/Documents/personal/eap", features = ["derive"]}
peridot = { path = "../peridot" }
tokio = { version = "1.36.0", features = ["full"] }
rdkafka = "*"
serde = { workspace=true, features = ["derive"] }
serde_json = { workspace=true }
tracing = {workspace = true}
uuid = { version = "1.8.0"}