[package]
name = "peridot"
version = "0.1.0"
edition = {workspace = true}
homepage = {workspace = true}
repository = {workspace = true}
license = {workspace = true}
authors = {workspace = true}

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
futures = "0.3.30"
parking_lot = "0.12.1"
rdkafka = "0.36.2"
serde_json = {workspace = true}
serde = {workspace = true}
surrealdb = {version = "1.1.1", default-features = false, features = ["protocol-ws"]}
thiserror = "*"
tokio = { version = "*", features = ["sync"]}
tracing = {workspace = true}
tracing-subscriber = {workspace = true}