[package]
name = "peridot"
version = "0.1.0"
edition = {workspace = true}
homepage = {workspace = true}
repository = {workspace = true}
license = {workspace = true}
authors = {workspace = true}

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "*"
dashmap = { workspace = true }
crossbeam = "0.8.4"
futures = "0.3.30"
parking_lot = "0.12.1"
rdkafka = { version = "0.36.2", features = ["tracing"] }
pin-project-lite = "*"
serde = {workspace = true}
serde_json = {workspace = true}
surrealdb = {version = "1.1.1", default-features = false, features = ["protocol-ws", "kv-rocksdb"]}
thiserror = "*"
tokio = { version = "*", features = ["sync"]}
tokio-stream = { version = "0.1.14", features = ["sync"] }
tracing = {workspace = true}
tracing-subscriber = {workspace = true}