[package]
name = "peridot_api"
version = "0.1.0"
edition = {workspace = true}
homepage = {workspace = true}
repository = {workspace = true}
license = {workspace = true}
authors = {workspace = true}

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam = "0.8.4"
axum = { version = "0.7.4", features = ["tracing", "ws"]}
anyhow = "1.0.79"
eap = { path = "/Users/ttreloar/Documents/personal/eap", features = ["derive"]}
peridot = { path = "../peridot" }
tokio = { version = "1.36.0", features = ["full"] }
rdkafka = "*"
serde = { workspace=true, features = ["derive"] }
tracing = {workspace = true}